--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "macaddress": "^0.5.3",
     "mercadopago": "^2.0.7",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "oui": "^13.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
-} 
+}
