--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "macaddress": "^0.5.3",
     "mercadopago": "^2.0.7",
     "node-fetch": "^3.3.2",
-    "oui": "^13.0.5"
+    "oui": "^13.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
