--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "pix-mikro-api",
-  "version": "1.0.0",
-  "description": "Backend API do sistema Pix Mikro (Express + Supabase + Mercado Pago)",
+  "name": "pix-mikro-backend",
+  "version": "1.1.0",
+  "description": "Backend API for the PIX MikroTik system",
   "main": "api.cjs",
-  "type": "commonjs",
   "scripts": {
     "start": "node api.cjs",
-    "dev": "nodemon api.cjs"
+    "dev": "nodemon api.cjs",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "mikrotik",
+    "pix",
+    "captive-portal"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.43.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "macaddress": "^0.5.3",
-    "mercadopago": "^2.0.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "node-fetch": "^3.3.2",
-    "oui": "^13.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.0"
   }
 }
