--- a/package.json
+++ b/package.json
@@ -1,1 +1,28 @@
- 
+{
+  "name": "pix-mikro-backend",
+  "version": "1.1.0",
+  "description": "Backend do sistema PIX Mikro (Node.js + Express + Supabase)",
+  "main": "api.cjs",
+  "scripts": {
+    "start": "node api.cjs",
+    "dev": "nodemon api.cjs"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": ["express", "supabase", "pix", "mikrotik", "mercadopago"],
+  "author": "Mateus",
+  "license": "MIT"
+} 
