--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
   "name": "pix-mikro-backend",
   "version": "1.1.0",
-  "description": "Backend do sistema PIX Mikro (Node.js + Express + Supabase)",
+  "description": "Backend API for the PIX MikroTik system",
   "main": "api.cjs",
   "scripts": {
     "start": "node api.cjs",
-    "dev": "nodemon api.cjs"
+    "dev": "nodemon api.cjs",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "mikrotik",
+    "pix",
+    "captive-portal"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/supabase-js": "^2.43.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.7",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "uuid": "^11.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": ["express", "supabase", "pix", "mikrotik", "mercadopago"],
-  "author": "Mateus",
-  "license": "MIT"
-} 
+    "nodemon": "^3.1.0"
+  }
+}
